Fixing bugs with failed line item comments; adding more to new mobile ui

--- a/less/inspectionMobile.less
+++ b/less/inspectionMobile.less
@@ -381,13 +381,14 @@ html {
 								text-align:center;
 
 								button {
-									width:25%;
+									width:27%;
 									display:inline-block;
-									line-height:250%;
-									margin:0% 3%;
+									line-height:225%;
+									margin:0% 2%;
 									border:none;
 									color:white;
 									transition: background-color 150ms;
+									font-size:115%;
 								}
 							}
 
@@ -553,23 +554,21 @@ html {
 									margin-bottom:4%;
 
 									.bottom-row {
-										font-size:12px;
+										font-size:80%;
 										color:#cccccc;
-										text-align:right;
 
-										.time {
-											position:absolute;
-											right:15%;
+										.parts {
+											margin-left:3%;
 										}
 									}
 
 									.task-name {
-										font-size:12px;
+										font-size:100%;
 										margin-bottom:2%;
 									}
 
 									.task-description {
-										font-size:11px;
+										font-size:90%;
 										color:#666666;
 										margin-bottom:2%;
 									}
