--- a/partials/inspection/review.html
+++ b/partials/inspection/review.html
@@ -19,7 +19,7 @@
 			<div class="section-name">{{section.fields.name}}</div>
 			<div ng-repeat="(id, failedLineItem) in failedLineItems[section.id]" class="line-item">
 				<div class="name">{{failedLineItem.fields.name}}</div>
-				<button type="button" ng-click="togglePricing(failedLineItem.id)"><img src="images/icons/dollar104.svg"><span>Pricing...</span></button>
+				<button type="button" ng-click="togglePricing(failedLineItem.fields.lineitem, selectedInspectionArea.id)"><img src="images/icons/dollar104.svg"><span>Pricing...</span></button>
 			</div>
 			<div ng-show="!failedLineItems[section.id]" class="blank-state">
 				<span>All items passed!</span><img src="images/icons/check10green.svg">
